--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1184,6 +1184,13 @@ a.back-to-top:hover, a.back-to-top:focus {
 /* Footer Area Start */
 .footer-area {
   background: #252525;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
 
 .footer-area .social-icon li {
