--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1184,7 +1184,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 /* Footer Area Start */
 .footer-area {
   background: #252525;
-  position: fixed;
+  /* position: fixed; */
   left: 0;
   bottom: 0;
   width: 100%;
